--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,5 @@ link_directories(${OpenGL_LIBRARY_DIRS})
 if(WIN32)
 target_link_libraries(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/vendors/glew/lib/Release/x64/glew32s.lib)
 target_link_libraries(${PROJECT_NAME} opengl32.lib)
+target_link_libraries(${PROJECT_NAME} glu32.lib)
 endif()
