--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.13)
 
 project(SampleApp)
 
+add_subdirectory(gui)
+
 add_library(OpenGLTemplate App.cpp App.h Shader.h Shader.cpp ShaderProgram.h ShaderProgram.cpp VertexBuffer.h VertexBuffer.cpp vendors/glad/src/glad.c)
+
+target_link_libraries(OpenGLTemplate gui)
 
 add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_libraries(${PROJECT_NAME} OpenGLTemplate)
+target_link_libraries(${PROJECT_NAME} OpenGLTemplate gui)
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 if (CMAKE_GENERATOR MATCHES "Visual Studio")
@@ -15,6 +19,7 @@ endif()
 target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR})
 target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/vendors/)
 target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/vendors/imgui)
+target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/vendors/imgui/backends)
 target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/vendors/glad/include)
 target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/vendors/glm)
 #target_include_directories(OpenGLTemplate PRIVATE ${CMAKE_SOURCE_DIR}/vendors/glew/include)
