--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = vendors/imgui
 	url = https://github.com/ocornut/imgui.git
 	branch = docking
+[submodule "vendors/assimp"]
+	path = vendors/assimp
+	url = https://github.com/assimp/assimp.git
